--- a/.github/workflows/ci-nymvpn-x-rust.yml
+++ b/.github/workflows/ci-nymvpn-x-rust.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04-arc, custom-runner-mac-m1, custom-windows-11]
+        os: [arc-ubuntu-22.04, custom-runner-mac-m1, custom-windows-11]
     runs-on: ${{ matrix.os }}
 
     steps:
