Re-import credential crates under separate name for backwards compatibility with ecash (#929)
* Import credential crates under different crate names

* Bump other crates to latest rev

* Use latest develop for other nym crates

* Fork the db file during credential check before the mixnet client gets ahold of it

* Update comment

* Use path instead str, extract const

* Import crates with -pre-ecash suffix instead

* Remove unused error enum

--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -80,6 +80,7 @@ serde = "1.0"
 serde_json = "1.0"
 sha2 = "0.10"
 signature = "2.2.0"
+sqlx = "0.6.3"
 tap = "1.0.1"
 thiserror = "1.0.63"
 time = "0.3.36"
@@ -101,24 +102,25 @@ url = "2.5"
 vergen = { version = "8.3.1", default-features = false }
 zeroize = "1.6.0"
 
-# Use the develop-pre-ecash-for-vpn branch until we have ported the vpn client to use ecash
+nym-authenticator-requests = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-client-core = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-config = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-crypto = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-explorer-client = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-http-api-client = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-node-requests = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-pemstore = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-sdk = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-task = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-topology = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-validator-client = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+nym-wireguard-types = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
 
-nym-authenticator-requests = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-bandwidth-controller = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-client-core = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-config = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-credential-storage = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-credentials = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-crypto = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-explorer-client = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-http-api-client = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-id = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-node-requests = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-pemstore = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-sdk = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-task = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-topology = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-validator-client = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-wireguard-types = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
+# Pointing to before ecash was merged, for backwards compatibility and migration period
+
+nym-credential-storage-pre-ecash = { git = "https://github.com/nymtech/nym", rev = "3f922cc0", package = "nym-credential-storage" }
+nym-credentials-pre-ecash = { git = "https://github.com/nymtech/nym", rev = "3f922cc0", package = "nym-credentials" }
+nym-id-pre-ecash = { git = "https://github.com/nymtech/nym", rev = "3f922cc0", package = "nym-id" }
+nym-bandwidth-controller-pre-ecash = { git = "https://github.com/nymtech/nym", rev = "3f922cc0", package = "nym-bandwidth-controller" }
