--- a/nym-vpn-core/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/nym-vpn-lib/Cargo.toml
@@ -32,6 +32,7 @@ rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 signature.workspace = true
+sqlx.workspace = true
 tap.workspace = true
 thiserror.workspace = true
 time.workspace = true
@@ -57,15 +58,15 @@ talpid-types = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = 
 talpid-wireguard = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "164e254aa" }
 
 nym-authenticator-requests.workspace = true
-nym-bandwidth-controller.workspace = true
+nym-bandwidth-controller-pre-ecash.workspace = true
 nym-bin-common.workspace = true
 nym-client-core.workspace = true
 nym-config.workspace = true
-nym-credential-storage.workspace = true
-nym-credentials.workspace = true
+nym-credential-storage-pre-ecash.workspace = true
+nym-credentials-pre-ecash.workspace = true
 nym-crypto.workspace = true
 nym-explorer-client.workspace = true
-nym-id.workspace = true
+nym-id-pre-ecash.workspace = true
 nym-ip-packet-requests.workspace = true
 nym-node-requests.workspace = true
 nym-pemstore.workspace = true
