--- a/.github/workflows/publish-nym-vpn-android.yml
+++ b/.github/workflows/publish-nym-vpn-android.yml
@@ -59,7 +59,7 @@ jobs:
     if: ${{ inputs.release_type != 'none' }}
     needs:
       - build-nym-vpn-android
-    runs-on: ubuntu-22.04-arc
+    runs-on: arc-ubuntu-22.04
     defaults:
       run:
         working-directory: nym-vpn-android
@@ -164,7 +164,7 @@ jobs:
 
 
   publish-nym-fdroid:
-    runs-on: ubuntu-22.04-arc
+    runs-on: arc-ubuntu-22.04
     needs:
       - publish-github
     if: inputs.release_type == 'release'
@@ -179,7 +179,7 @@ jobs:
   publish-play:
     if: ${{ inputs.track != 'none' && inputs.track != '' }}
     # issue here: https://github.com/ruby/setup-ruby?tab=readme-ov-file#using-self-hosted-runners
-    runs-on: ubuntu-22.04-arc
+    runs-on: arc-ubuntu-22.04
     defaults:
       run:
         working-directory: nym-vpn-android
