--- a/.github/workflows/build-nym-vpn-desktop-linux.yml
+++ b/.github/workflows/build-nym-vpn-desktop-linux.yml
@@ -31,7 +31,7 @@ jobs:
 
   build-linux:
     needs: build-wireguard-go-linux
-    runs-on: ubuntu-22.04-arc
+    runs-on: arc-ubuntu-22.04
     outputs:
       UPLOAD_DIR_LINUX: ${{ env.UPLOAD_DIR_LINUX }}
       PKG_VERSION: ${{ steps.package-version.outputs.metadata }}
