--- a/.github/workflows/build-wireguard-go-linux.yml
+++ b/.github/workflows/build-wireguard-go-linux.yml
@@ -6,7 +6,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04-arc
+    runs-on: arc-ubuntu-22.04
 
     steps:
       - name: Install system dependencies
