--- a/.github/workflows/ci-nym-vpn-android.yml
+++ b/.github/workflows/ci-nym-vpn-android.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   check:
-    runs-on: ubuntu-22.04-arc
+    runs-on: arc-ubuntu-22.04
     defaults:
       run:
         working-directory: nym-vpn-android
