Rework nym-vpn-store to also support mnemonics (#866)
* wip

* wip

* wip

* wip

* wip

* dir structure

* Rename back

* tests

* Move keystore to subdir

* Create struct and trait in vpn lib

* All builds now

* Tidy

* rustfmt

* More tidy

* use workspace dependency

* Extend stored mnemonic struct

* Fix tests

* Remove unused dependencies

* wip

* wip

* Add error handling

* Pass account in vpnc

* Fix compilation on windows

* Fix unused on windows

* Remove old comment

--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -13,6 +13,7 @@ license.workspace = true
 anyhow.workspace = true
 axum-server = { workspace = true, features = ["tls-rustls"] }
 axum.workspace = true
+bip39.workspace = true
 clap.workspace = true
 dirs.workspace = true
 futures.workspace = true
@@ -32,7 +33,7 @@ tonic-health.workspace = true
 tonic-reflection.workspace = true
 tonic.workspace = true
 tower-http = { workspace = true, features = ["cors"] }
-tracing-appender = "0.2.3"
+tracing-appender.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tracing.workspace = true
 url.workspace = true
