--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -57,6 +57,7 @@ axum-server = { version = "0.6.0", features = ["tls-rustls"] }
 base64 = "0.22"
 base64-url = "3.0.0"
 bincode = "1.3.3"
+bip39 = "2.0"
 bs58 = "0.5.1"
 bytes = "1.7"
 chrono = "0.4.38"
@@ -86,6 +87,7 @@ sha2 = "0.10"
 signature = "2.2.0"
 sqlx = "0.6.3"
 tap = "1.0.1"
+tempfile = "3.12"
 thiserror = "1.0.63"
 time = "0.3.36"
 tokio = { version = "1.39" }
@@ -99,6 +101,7 @@ tonic-reflection = { version = "0.11.0", features = ["server"] }
 tower = "0.4.13"
 tower-http = { version = "0.5.2", features = ["cors"] }
 tracing = "0.1"
+tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tun2 = { version = "2.0.5", features = ["async"] }
 uniffi = { version = "0.27.3", features = ["cli"] }
