--- a/nym-vpn-core/crates/nym-vpn-store/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-store/Cargo.toml
@@ -9,13 +9,19 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+bip39.workspace = true
 nym-crypto = { workspace = true, features = ["rand", "symmetric", "asymmetric"] }
 nym-pemstore.workspace = true
+nym-validator-client.workspace = true
 rand.workspace = true
+rand_chacha.workspace = true
+serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["sync"] }
 zeroize.workspace = true
-rand_chacha = "0.3.1"
 
 [dev-dependencies]
+bip39 = { workspace = true, features = ["rand"] }
+tempfile.workspace = true
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
