--- a/.github/workflows/create-release-nym-vpn-core.yml
+++ b/.github/workflows/create-release-nym-vpn-core.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Create a new branch
         id: create_branch
         run: |
-          BRANCH_NAME="release-$(date +'%Y%m%d%H%M%S')"
+          BRANCH_NAME="release-nym-vpn-core-$(date +'%Y%m%d%H%M%S')"
           git checkout -b $BRANCH_NAME
           echo "branch_name=$BRANCH_NAME" >> $GITHUB_ENV
 
@@ -50,14 +50,14 @@ jobs:
         run: |
           ./scripts/create-nym-vpn-core-release.sh
 
-      - name: Run bump version script
+      - name: Run bump to dev version script
         run: |
           ./scripts/bump-nym-vpn-core-to-next-dev-version.sh
 
-      - name: Commit bumped version
-        run: |
-          git add .
-          git commit -m "Bump version to next dev version"
+      # - name: Commit bumped version
+      #   run: |
+      #     git add .
+      #     git commit -m "Bump version to next dev version"
           # git push origin ${{ env.branch_name }}
 
       - name: Open a Pull Request
@@ -67,10 +67,10 @@ jobs:
           title: "Release: ${{ env.branch_name }}"
           body: "Automated PR for the release."
 
-      - name: Push the new branch and tags
-        run: |
-          git push origin ${{ env.branch_name }}
-          git push --tags
+      # - name: Push the new branch and tags
+      #   run: |
+      #     git push origin ${{ env.branch_name }}
+      #     git push --tags
 
       # - name: Commit and push the bumped version
       #   run: |
