--- a/nym-vpn-core/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/nym-vpn-lib/Cargo.toml
@@ -89,7 +89,8 @@ nym-wg-go = { path = "../crates/nym-wg-go" }
 android_logger = "0.14.1"
 err-derive = "0.3.1"
 jnix = { version = "=0.5.1", features = ["derive"] }
-nix = "0.23"
+nix = { workspace = true, features = ["socket", "net"] }
+libc = { workspace = true }
 rand = "0.8.5"
 
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
