Extract out nym-wg-gateway-client crate

--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "crates/nym-vpn-store",
     "crates/nym-vpnc",
     "crates/nym-vpnd",
+    "crates/nym-wg-gateway-client",
     "nym-vpn-lib",
 ]
 
