--- a/nym-vpn-core/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/nym-vpn-lib/Cargo.toml
@@ -81,6 +81,7 @@ nym-gateway-directory = { path = "../crates/nym-gateway-directory" }
 nym-ip-packet-client = { path = "../crates/nym-ip-packet-client" }
 nym-vpn-api-client = { path = "../crates/nym-vpn-api-client" }
 nym-vpn-store = { path = "../crates/nym-vpn-store" }
+nym-wg-gateway-client = { path = "../crates/nym-wg-gateway-client" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.14.1"
