--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "crates/nym-vpnc",
     "crates/nym-vpnd",
     "crates/nym-wg-gateway-client",
+    "crates/nym-wg-go",
     "nym-vpn-lib",
 ]
 
@@ -53,6 +54,7 @@ anyhow = "1.0.86"
 async-trait = "0.1.81"
 axum = { version = "0.7.5" }
 axum-server = { version = "0.6.0", features = ["tls-rustls"] }
+base64 = "0.22"
 base64-url = "3.0.0"
 bincode = "1.3.3"
 bip39 = "2.0"
@@ -62,6 +64,7 @@ chrono = "0.4.38"
 clap = "4.5"
 dirs = "5.0.1"
 futures = "0.3.30"
+hex = "0.4"
 hickory-resolver = "0.24.1"
 http = "0.2.12"                                                     # version compatible with tonic
 ipnetwork = "0.16"
@@ -103,7 +106,9 @@ tun2 = { version = "2.0.5", features = ["async"] }
 uniffi = { version = "0.27.3", features = ["cli"] }
 url = "2.5"
 vergen = { version = "8.3.1", default-features = false }
+x25519-dalek = "2.0"
 zeroize = "1.6.0"
+nix = "0.29"
 
 nym-authenticator-requests = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
 nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
