--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -178,6 +178,16 @@ jobs:
         run: |
           cargo fmt --check
 
+      - name: set rust flags
+        working-directory: nym-vpn-core
+        if: contains(matrix.target, 'android')
+        run: |
+          case  "$(uname -s)" in
+            Darwin*) export RUSTFLAGS="-L ${GITHUB_WORKSPACE}/build/lib/aarch64-apple-darwin -L ${GITHUB_WORKSPACE}/build/lib/aarch64-linux-android";;
+            Linux*) export RUSTFLAGS="-L ${GITHUB_WORKSPACE}/build/lib/x86_64-unknown-linux-gnu -L ${GITHUB_WORKSPACE}/build/lib/aarch64-linux-android";;
+            MINGW*|MSYS_NT*) export RUSTFLAGS="-L ${GITHUB_WORKSPACE}/build/lib/x86_64-pc-windows-msvc -L ${GITHUB_WORKSPACE}/build/lib//aarch64-linux-android";;
+          esac
+
       - name: Build
         if: "!contains(matrix.target, 'android')"
         working-directory: nym-vpn-core
@@ -201,8 +211,7 @@ jobs:
         if: contains(matrix.target, 'android')
         working-directory: nym-vpn-core
         run: |
-          rustflags="-L ${GITHUB_WORKSPACE}/build/lib/x86_64-unknown-linux-gnu"
-          RUSTFLAGS=$rustflags cargo run --bin uniffi-bindgen generate --library target/aarch64-linux-android/debug/libnym_vpn_lib.so  --language kotlin --out-dir build -n
+          cargo run --bin uniffi-bindgen generate --library target/aarch64-linux-android/debug/libnym_vpn_lib.so  --language kotlin --out-dir build -n
 
       - name: Generate uniffi (iOS)
         if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
