--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -93,16 +93,6 @@ jobs:
           echo "TRIPLET=$triplet" >> $GITHUB_ENV
           echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet}" >> $GITHUB_ENV
 
-      - name: set rust flags
-        working-directory: nym-vpn-core
-        shell: bash
-        run: |
-          case  "$(uname -s)" in
-            Darwin*) echo "export RUSTFLAGS="-L ${GITHUB_WORKSPACE}/build/lib/aarch64-apple-darwin -L ${GITHUB_WORKSPACE}/build/lib/aarch64-linux-android -L ${GITHUB_WORKSPACE}/build/lib/aarch64-apple-ios";;" >> $GITHUB_ENV 
-            Linux*) echo "export RUSTFLAGS="-L ${GITHUB_WORKSPACE}/build/lib/x86_64-unknown-linux-gnu -L ${GITHUB_WORKSPACE}/build/lib/aarch64-linux-android -L ${GITHUB_WORKSPACE}/build/lib/aarch64-apple-ios";;" >> $GITHUB_ENV
-            MINGW*|MSYS_NT*) echo "export RUSTFLAGS="-L ${GITHUB_WORKSPACE}/build/lib/x86_64-pc-windows-msvc -L ${GITHUB_WORKSPACE}/build/lib//aarch64-linux-android -L ${GITHUB_WORKSPACE}/build/lib/aarch64-apple-ios";;" >> $GITHUB_ENV
-          esac
-
       - name: Set extra env for Windows
         if: contains(matrix.os, 'windows')
         shell: bash
@@ -204,13 +194,15 @@ jobs:
         if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
         working-directory: nym-vpn-core
         run: |
-          cargo build --verbose --target aarch64-apple-ios -p nym-vpn-lib
+          rustflags="-L ${GITHUB_WORKSPACE}/build/lib/aarch64-apple-ios" 
+          RUSTFLAGS=$rustflags cargo build --verbose --target aarch64-apple-ios -p nym-vpn-lib
 
       - name: Generate uniffi (Android)
         if: contains(matrix.target, 'android')
         working-directory: nym-vpn-core
         run: |
-          cargo run --bin uniffi-bindgen generate --library target/aarch64-linux-android/debug/libnym_vpn_lib.so  --language kotlin --out-dir build -n
+          rustflags="-L ${GITHUB_WORKSPACE}/build/lib/x86_64-unknown-linux-gnu"
+          RUSTFLAGS=$rustflags cargo run --bin uniffi-bindgen generate --library target/aarch64-linux-android/debug/libnym_vpn_lib.so  --language kotlin --out-dir build -n
 
       - name: Generate uniffi (iOS)
         if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
