--- a/nym-vpn-core/crates/nym-vpn-cli/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-cli/Cargo.toml
@@ -14,6 +14,7 @@ anyhow.workspace = true
 bs58.workspace = true
 clap = { workspace = true, features = ["cargo", "derive"] }
 dirs.workspace = true
+futures.workspace = true
 ipnetwork.workspace = true
 thiserror.workspace = true
 time.workspace = true
