--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -181,18 +181,14 @@ jobs:
       - name: Build
         if: "!contains(matrix.target, 'android')"
         working-directory: nym-vpn-core
-        shell: bash
         run: |
-          rustflags="-L ./build/lib/x86_64-pc-windows-msvc" 
-          RUSTFLAGS=$rustflags cargo build --verbose
+          cargo build --verbose
 
       - name: Build (Android)
         if: contains(matrix.target, 'android')
         working-directory: nym-vpn-core
-        shell: bash
         run: |
-          rustflags="-L ./build/lib/aarch64-linux-android" 
-          RUSTFLAGS=$rustflags cargo ndk  -t aarch64-linux-android -o ./build build -p nym-vpn-lib
+          cargo ndk  -t aarch64-linux-android -o ./build build -p nym-vpn-lib
 
       - name: Build (iOS)
         if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
@@ -204,9 +200,8 @@ jobs:
       - name: Generate uniffi (Android)
         if: contains(matrix.target, 'android')
         working-directory: nym-vpn-core
-        shell: bash
         run: |
-          rustflags="-L ./build/lib/x86_64-unknown-linux-gnu"
+          rustflags="-L ${GITHUB_WORKSPACE}/build/lib/x86_64-unknown-linux-gnu"
           RUSTFLAGS=$rustflags cargo run --bin uniffi-bindgen generate --library target/aarch64-linux-android/debug/libnym_vpn_lib.so  --language kotlin --out-dir build -n
 
       - name: Generate uniffi (iOS)
