Revert ci script

--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -120,6 +120,11 @@ jobs:
         run: |
           ./wireguard/build-wireguard-go.sh
 
+      - name: Build wireguard (iOS)
+        shell: bash
+        run: |
+          ./wireguard/build-wireguard-go.sh --ios
+
       - name: Build wireguard (Android)
         if: contains(matrix.target, 'android')
         run: ./wireguard/libwg/build-android.sh
