--- a/nym-vpn-core/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/nym-vpn-lib/Cargo.toml
@@ -17,6 +17,7 @@ path = "uniffi-bindgen.rs"
 
 [dependencies]
 anyhow.workspace = true
+base64.workspace = true
 bincode.workspace = true
 bs58.workspace = true
 bytes.workspace = true
