--- a/nym-vpn-core/crates/nym-vpnd/.pkg/aur/PKGBUILD
+++ b/nym-vpn-core/crates/nym-vpnd/.pkg/aur/PKGBUILD
@@ -42,7 +42,7 @@ build() {
   wg_go=$srcdir/$_srcdir/build/lib/$CARCH-unknown-linux-gnu
 
   # build nym-vpnd
-  pushd nym-vpn-core/nym-vpnd/
+  pushd nym-vpn-core/crates/nym-vpnd/
 
   # sqlx does not support LTO build flag, which is enabled by default in Arch
   # set the C flag -ffat-lto-objects to solve the issue
