android: logs screen changes (#987)
* remove notification permission

* fix: navigation backstack

* add basic logs screen delete modal

* fix: android nightly workflow

* add package build type names

* fix: logs export bug

* bump deps

--- a/nym-vpn-android/app/src/main/AndroidManifest.xml
+++ b/nym-vpn-android/app/src/main/AndroidManifest.xml
@@ -103,6 +103,15 @@
 			android:name=".receiver.BackgroundActionReceiver"
 			android:enabled="true"
 			android:exported="false"/>
+		<provider
+			android:name="androidx.core.content.FileProvider"
+			android:authorities="@string/provider"
+			android:exported="false"
+			android:grantUriPermissions="true">
+			<meta-data
+				android:name="android.support.FILE_PROVIDER_PATHS"
+				android:resource="@xml/file_paths" />
+		</provider>
 		<!-- Sentry -->
 		<meta-data
 			android:name="io.sentry.auto-init"
