--- a/.github/workflows/build-nym-vpn-android.yml
+++ b/.github/workflows/build-nym-vpn-android.yml
@@ -110,7 +110,7 @@ jobs:
 
       - name: Install deps
         run: |
-          sudo apt-get update && sudo apt-get install -y libdbus-1-dev libmnl-dev libnftnl-dev protobuf-compiler git curl gcc g++ make unzip
+          sudo brew install protobuf-compiler git curl make unzip
 
       # Here we need to decode keystore.jks from base64 string and place it
       # in the folder specified in the release signing configuration
