--- a/.github/workflows/build-nym-vpn-android.yml
+++ b/.github/workflows/build-nym-vpn-android.yml
@@ -74,9 +74,6 @@ jobs:
           java-version: '17'
           cache: gradle
 
-      - name: Install unzip
-        run: sudo apt-get update && sudo apt-get install -y unzip
-
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
@@ -108,9 +105,13 @@ jobs:
         run: |
           cargo install cargo-ndk cargo-license --locked
 
-      - name: Install deps
+#      - name: Install deps
+#        run: |
+#          sudo apt-get update && sudo apt-get install -y libdbus-1-dev libmnl-dev libnftnl-dev protobuf-compiler git curl gcc g++ make unzip
+
+      - name: Install deps macos
         run: |
-          sudo brew install protobuf-compiler git curl make unzip
+          brew install protobuf
 
       # Here we need to decode keystore.jks from base64 string and place it
       # in the folder specified in the release signing configuration
