Add env vars loading from repo

--- a/nym-vpn-apple/.gitignore
+++ b/nym-vpn-apple/.gitignore
@@ -54,9 +54,10 @@ Package.resolved
 
 Carthage/Build/
 
-
-
-nym-vpn-client/
 MixnetLibrary/Libs
+
+Envs/canary.env
+Envs/sandbox.env
+Envs/mainnet.env
 
 .sentryclirc
