--- a/nym-vpn-core/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/nym-vpn-lib/Cargo.toml
@@ -51,6 +51,10 @@ tun2 = { workspace = true, features = ["async"] }
 uniffi = { workspace = true, features = ["cli"] }
 url.workspace = true
 
+# Pin down shadowsocks to prevent mullvad dependencies from using newer crates that aren't compatible.
+shadowsocks-service = { version = "=1.14.3" }
+shadowsocks = { version = "=1.14.2" }
+
 talpid-core = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "f9fd4be7f" }
 talpid-platform-metadata = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "f9fd4be7f" }
 talpid-routing = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "f9fd4be7f" }
