--- a/.github/workflows/build-nym-vpn-core-ios.yml
+++ b/.github/workflows/build-nym-vpn-core-ios.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Setup cargo swift
         run: |
-          cargo install --git https://github.com/neacsu/cargo-swift.git
+          cargo install cargo-swift
 
       - name: Install Protoc
         uses: arduino/setup-protoc@v2
