--- a/nym-vpn-android/gradle/libs.versions.toml
+++ b/nym-vpn-android/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist = "0.34.0"
-agp = "8.6.0-rc01"
+agp = "8.6.0"
 coreSplashscreen = "1.0.1"
 detektRulesCompose = "1.4.0"
 jna = "5.14.0"
